--- a/src/Components/Pages/Create/create.css
+++ b/src/Components/Pages/Create/create.css
@@ -31,3 +31,75 @@
     display: flex;
     margin-top: 1rem; 
 }
+
+
+.postFormInfo {
+    flex: 6;
+    display: flex;
+    flex-direction: column;
+}
+
+.inputImage {
+        width: 70%;
+        height: 10rem;
+        object-fit: cover;
+        border-radius: 10px;
+}
+
+.inputField {
+    margin: 0.2rem;
+    margin-bottom: 1rem;
+    height: 2rem;
+    width: 15rem;
+    border: none;
+    border-radius: 0.4rem;
+    color: white;
+    background-color: rgb(82, 212, 255)
+}
+
+.inputField::placeholder {
+    font-weight: normal;
+    color: rgb(255, 255, 255);
+}
+
+.title {
+    width: 12rem;
+}
+
+.fileInput {
+    display: none;
+}
+
+.addIcon {
+    margin-left: 0.5rem;
+    font-size: 1.4rem;
+    color: rgb(52, 204, 255);
+    cursor: pointer;
+}
+
+
+.postDesc {
+    flex: 6;
+}
+
+.description {
+    height: 100%;
+    width: 90%;
+
+}
+
+.submitButton {
+    position: relative;
+    margin: 1rem;
+    border: none;
+    background-color: #52d4ff;
+    color: white;
+    border-radius: 1rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.uploadIcon {
+    margin: 4px;
+}
