--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,9 +14,10 @@ body {
 
 
 .App {
-
     display: inline-flex;
+    align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vh;
+    height: auto;
 }
