--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
+html, body {
+    height:100%;
+    width:100%;
+    margin:0;
+    padding:0;
+}
+
 html {
 
     font-size: inherit !important;
@@ -12,12 +19,11 @@ body {
     justify-content: center;
 }
 
-
 .App {
+
+    height: 100%;
+    width: 100%;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    width: 100vh;
-    height: auto;
 }
